test/ShadowingErrorParam.gold
Error in ShadowingErrorParam.os, 3.19:
local declaration A shadows a global declaration at ShadowingErrorParam.os, 1:1
