test/ShadowingErrorParam.os
int A = 5;

func int problem(int A)
{
  return A * 4;
}

proc void main()
{
  print(problem(3), '\n');
}
